update json output implementations and pivot from gson to objectmapper